<resources>
  <string name="leku_lib_version">version 4.0.0</string>
  <string name="app_name">Hakai</string>
  <string name="action_sign_in_short">Register</string>
  <string name="email">Email</string>
  <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
  <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
  <string name="change_email">Change Email</string>
  <string name="change_password">Change Password</string>
  <string name="send_password_reset_email">Send Password reset email</string>
  <string name="remove_user">Remove user</string>
  <string name="new_pass">New Password</string>
  <string name="title_activity_profile">Firebase</string>
  <string name="title_activity_login">Sign in</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="hint_name">Fullname</string>
  <string name="btn_login">LOGIN</string>
  <string name="prompt_password">Please enter your password</string>
  <string name="btn_link_to_register">Not a member? Join BUS TAP!</string>
  <string name="btn_link_to_login">Already registered. Login Me!</string>
  <string name="title_activity_reset_password">ResetPasswordActivity</string>
  <string name="btn_forgot_password">Forgot your password?</string>
  <string name="btn_reset_password">Reset Password</string>
  <string name="btn_back"><![CDATA[<< Back]]></string>
  <string name="hint_new_email">New Email</string>
  <string name="btn_change">Change</string>
  <string name="btn_send">Send</string>
  <string name="btn_remove">Remove</string>
  <string name="btn_sign_out">Sign Out</string>
  <string name="lbl_forgot_password">Forgot password?</string>
  <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
  <string name="email_id">Email ID</string>
  <string name="leku_app_name" translatable="false">Leku Demo</string>
  <string name="google_maps_key">AIzaSyC5j_wgkZErk0ZT7kj64p0MqtUZJgFDpgM</string>
  <string name="launch_map_picker" translatable="false">LAUNCH MAP LOCATION PICKER ACTIVITY</string>
  <string name="launch_map_picker_with_pois" translatable="false">LAUNCH MAP WITH POIS</string>
  <string name="title_activity_main4">Main4Activity</string>
  <string name="title_activity_main3">Main3Activity</string>
</resources>
